syntax = "proto3";

package content_processor;

service ContentProcessorService {
  rpc ProcessText (ProcessTextRequest) returns (ProcessTextResponse);
}

message ProcessTextRequest {
  string text_id = 1; // Un ID unique pour le texte, peut être généré par le client ou la gateway
  string text = 2;
}

message ProcessTextResponse {
  string text_id = 1;
  string sentiment = 2; // e.g., "POSITIVE", "NEGATIVE", "NEUTRAL"
  repeated string suggested_keywords = 3;
  string error_message = 4; // En cas d'erreur
}